[package]
name = "pathtobonjwa"
version = "1.1.1"
edition = "2021"
description = "Brood War replay analyzer — helping players improve through data-driven insights"
license = "MIT"

[dependencies]
eframe = "0.31"
egui_plot = "0.31"
rfd = "0.15"
chrono = "0.4"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
encoding_rs = "0.8"
